<resources>
    <string name="app_name">债云端</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_login_btn">登录</string>
    <string name="string_resgier_btn">注册</string>
    <string name="string_newsInfo">新闻详情</string>
    <string name="three_landing">第三方登录</string>
    <string name="string_user">真实姓名:</string>
    <string name="zhongjin_ty">中金天眼</string>
    <string name="icard">身份证号:</string>
    <string name="quxiao">取消</string>
    <string name="queren">确认</string>
    <string name="yhm">用户名:</string>
    <string name="qym">姓名/企业名</string>
    <string name="sfz">身份证号</string>
    <string name="lidh">可用于登录和找回密码</string>
    <string name="c_sheng">省</string>
    <string name="c_quxian">县(区)</string>
    <string name="tijiao">提交</string>
    <string name="PayFs">请选择支付方式:</string>
    <string name="toPay">去支付</string>
    <string name="toPayS">支付</string>
    <string name="toPay_zfb">支付宝支付</string>
    <string name="toPay_yl">微信支付</string>
    <string name="zuixin">最新动态</string>
    <string name="lock">查看更多</string>
    <string name="my">我的</string>
    <string name="settuser">请输入真实姓名</string>
    <string name="ic_card">请输入身份证号</string>
    <string name="lianxi">手 机 号:</string>
    <string name="yzm">验 证 码:</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="fsyzm">发送验证码</string>
    <string name="mima">密    码:</string>
    <string name="setmima">请设置密码</string>
    <string name="quermima">确认密码:</string>
    <string name="zquermima">再次确认密码</string>
    <string name="yuedu">阅读并同意《债云端(注册)服务协议》</string>
    <string name="backlogin">返回登录</string>
    <string name="zhuce">注册</string>
    <string name="wallet">我的钱包</string>
    <string name="mingxi">明细</string>
    <string name="recharge">充值</string>
    <string name="tixain">提现</string>
    <string name="bank_card">我的银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="zhaohui_password">找回密码</string>
    <string name="news_page">中金动态</string>
    <string name="date_xx">债事信息</string>
    <string name="get_code">再次获取证码</string>
    <string name="recommend_vip">我的会员</string>
    <string name="recommend_president">推荐行长</string>
    <string name="my_commission">我的佣金</string>
    <string name="zssc">债事商场</string>
    <string name="sxy">商学院</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
</resources>
