<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bai"
    android:orientation="vertical">

    <LinearLayout style="@style/toolbar">

        <include
            layout="@layout/zyd_title_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bai"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp">

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="@string/string_user" />

                <EditText
                    android:id="@+id/user_name"
                    style="@style/editor"
                    android:hint="@string/settuser" />
            </LinearLayout>


            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="@string/lianxi" />

                <EditText
                    android:id="@+id/phone_number"
                    style="@style/editor"
                    android:hint="@string/lidh"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:text="@string/yzm"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_yangzheng"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="4"
                    android:background="@drawable/login_et_back"
                    android:hint="@string/qsryzm"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_yangzheng"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/delete"
                    android:gravity="center"
                    android:text="@string/fsyzm"
                    android:textColor="@color/bai" />

            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="@string/mima" />

                <EditText
                    android:id="@+id/et_resiger_mima"
                    style="@style/editor"
                    android:hint="@string/setmima"
                    android:inputType="textPassword" />
            </LinearLayout>


            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="@string/quermima" />

                <EditText
                    android:id="@+id/confirm_password"
                    style="@style/editor"
                    android:hint="@string/zquermima"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="推荐编码:" />

                <EditText
                    android:id="@+id/et_tjr"
                    style="@style/editor"
                    android:hint="请输入推荐人的推荐编码"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_btn"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/agreeno" />

                <TextView
                    android:id="@+id/tv_resiger_xy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:gravity="center"
                    android:text="@string/yuedu"
                    android:textColor="#FF0B81DC"
                    android:textSize="13sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:id="@+id/regiser_btn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/login_btn"
                android:text="@string/zhuce"
                android:textColor="@color/white"

                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>