<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_h__open_debt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jlgproject.activity.H_OpenDebt">


    <LinearLayout style="@style/toolbar"
        >

        <include
            layout="@layout/zyd_title_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bai"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="@string/yhm" />

                <EditText
                    android:id="@+id/et_kh_username"
                    style="@style/editor"
                    android:hint="@string/qym"
                    />

            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="身份证号:" />

                <EditText
                    android:id="@+id/et_kh_sfzh"
                    style="@style/editor"
                    android:hint="@string/sfz"

                    />

            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="联系电话:" />

                <EditText
                    android:id="@+id/et_kh_lxdh"
                    style="@style/editor"
                    android:hint="@string/lidh" />

            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="从业地址:" />

                <LinearLayout
                    style="@style/editor"
                    >
                    <include layout="@layout/spinner"></include>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/login_linerlayout">

                <TextView
                    style="@style/textView"
                    android:text="推荐编码:" />

                <EditText
                    android:id="@+id/et_kh_tjr"
                    style="@style/editor"
                    android:hint="请输入推荐人手机号"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/et_kh_tj"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/login_btn"
                android:text="提交"
                android:textColor="@color/bai"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
