<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_to_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jlgproject.activity.ToPay">

    <LinearLayout style="@style/toolbar">

        <include
            layout="@layout/zyd_title_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></include>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bai"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/PayFs"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_weight="1"
                        android:src="@mipmap/pay_zfb" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:src="@mipmap/weixin"
                        />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/toPay_zfb"
                    android:textColor="@color/qianhei"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/toPay_yl"
                    android:textColor="@color/qianhei"
                    android:textSize="18sp"
                    />
            </LinearLayout>


            <RadioGroup
                android:id="@+id/rg_parent"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_zfb"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <RadioButton
                    android:id="@+id/rb_yl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

            </RadioGroup>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            >

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/payfei"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:textColor="@color/qianhei"
                android:textSize="22sp" />

            <Button
                android:id="@+id/bt_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/toPay"
                android:textColor="@color/bai"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>






</LinearLayout>


